edition = "2024";

package aks.flex.components.linux;

option go_package = "github.com/Azure/AKSFlexNode/components/linux";

import "components/api/api.proto";

message ConfigureBaseOS {
  api.Metadata metadata = 1;

  ConfigureBaseOSSpec spec = 2;

  ConfigureBaseOSStatus status = 3;
}

message ConfigureBaseOSSpec {
}

message ConfigureBaseOSStatus {
}